# qbit-api-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: login.rs  manual_test.rs  torrents.rs
src/: api.rs  client.rs  error.rs  lib.rs  types.rs
src/api/: app.rs  auth.rs  log.rs  mod.rs  search.rs  sync.rs  torrents.rs  transfer.rs
src/types/: app.rs  auth.rs  log.rs  mod.rs  search.rs  sync.rs  torrents.rs  transfer.rs
tests/: MaindataResponse.json  PreferencesResponse.json
tests/test_server/: docker-compose.yml
