[package]
name = "qbit-rs"
version = "0.1.0"
edition = "2021"
authors = ["Koro33 <koro33g@gmail.com>"]
repository = "https://github.com/koro33/qbit-rs"
license = "MIT"
readme = "README.md"
description = "A asynchronous Rust wrapper for qBittorrent Web API"
keywords = ["qbittorrent", "torrent", "api"]
categories = ["api-bindings"]

[dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "sync", "parking_lot"] }
reqwest = { version = "0.11.18", features = ["json", "cookies", "multipart"] }
reqwest_cookie_store = "0.6.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_repr = "0.1.12"
serde_with = "3.0.0"
thiserror = "1.0.40"
log = "0.4.19"
url = "2.4.0"
async-trait = "0.1.68"

[dev-dependencies]
env_logger = { version = "0.10.0" }
anyhow = { version = "1.0.71" }
