[package]
name = "qbit-api-rs"
version = "0.1.0"
edition = "2021"
authors = ["Koro33 <koro33g@gmail.com>"]
repository = "https://github.com/koro33/qbit-api-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A asynchronous Rust wrapper for qBittorrent Web API"
keywords = ["qbittorrent", "api"]
categories = ["api-bindings", "asynchronous"]
exclude = [
    "tests/*",
]

[dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "sync", "parking_lot"] }
reqwest = { version = "0.11.22", features = ["json", "cookies", "multipart"] }
reqwest_cookie_store = "0.6.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
serde_with = "3.4.0"
thiserror = "1.0.50"
log = "0.4.20"
url = "2.4.1"
async-trait = "0.1.74"

[dev-dependencies]
env_logger = { version = "0.10.1" }
anyhow = { version = "1.0.75" }
